force-app/main/default/objects/User_Story__c/fields/Deployment_Task__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Task</label>
    <referenceTo>Deployment_Task__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>