force-app/main/default/objects/User_Story__c/fields/Release_Version__c.field-meta.xml
<CustomField>
    <fullName>Release_Version__c</fullName>
    <label>Release Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release 1</fullName>
            </value>
            <value>
                <fullName>Release 2</fullName>
            </value>
            <value>
                <fullName>Release 3</fullName>
            </value>
            <value>
                <fullName>Release 4</fullName>
            </value>
            <value>
                <fullName>Release 5</fullName>
            </value>
            <value>
                <fullName>Release 6</fullName>
            </value>
            <value>
                <fullName>Release 7</fullName>
            </value>
            <value>
                <fullName>Release 8</fullName>
            </value>
            <value>
                <fullName>Release 9</fullName>
            </value>
            <value>
                <fullName>Release 10</fullName>
            </value>
            <value>
                <fullName>Release 11</fullName>
            </value>
            <value>
                <fullName>Release 12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>