force-app/main/default/objects/User_Story__c/fields/Roll_Back__c.field-meta.xml
<CustomField>
    <fullName>Roll_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll Back</label>
    <type>Checkbox</type>
</CustomField>