force-app/main/default/objects/User_Story__c/fields/User_Story_Reference__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Reference__c</fullName>
    <displayFormat>US-{000000}</displayFormat>
    <label>User Story Reference</label>
    <type>AutoNumber</type>
</CustomField>