force-app/main/default/objects/User_Story__c/fields/User_Story_Require_Deployment_Task__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Require_Deployment_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Story Require Deployment Task</label>
    <type>Checkbox</type>
</CustomField>