force-app/main/default/objects/User_Story__c/listViews/Release_Management_User_Story.listView-meta.xml
<ListView>
    <fullName>Release_Management_User_Story</fullName>
    <filterScope>Queue</filterScope>
    <label>Release Management</label>
    <queue>Release_Management</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>